# skillval2

./: .gitignore  README_local.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  setup.cfg
backend/app/: main.py
backend/app/core/: config.py
backend/app/data/: mobility_competencies.py
backend/app/db/: mongo.py
backend/app/models/: assessment.py  audit.py  candidate.py  evidence.py  mobility.py  report.py  traject.py  user.py
backend/app/routers/: __init__.py  assessments.py  auth.py  candidates.py  evidence.py  status.py  trajecten.py  ws_live.py
backend/app/schemas/: ai.py  assessment.py  evidence.py
backend/app/services/: ai_service.py  audit_service.py  auth_service.py  fraud_service.py  stt_service.py  tts_service.py
backend/app/utils/: audit.py  jwt.py
backend/scripts/: seed_demo_candidate.py  seed_jeugdzorg_traject.py
docs/: architecture_overview.md  backend_structure.md  data_model.md  frontend_structure.md  pitch.txt  ui_design.md
frontend/: .env.example  AZURE_SETUP.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AIChatPanel.tsx  AssessmentCaptureView.tsx  FraudFlagList.tsx  (+6 more)
frontend/lib/: api.ts  auth.ts  trajectSelector.ts
(+182 files in other folders)
